--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 h1 {
     text-align: center;
 }
-td {
+td div{
     width: 250px;
     height: 200px;
     background-color: blanchedalmond;
